[tool.poetry]
name = "reaper-nlp"
version = "0.1.0"
description = ""
authors = ["Simon Ljungbeck <simon.ljungbeck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-reapy = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
